force-app/main/default/objects/animalos__Action_Item__c/animalos__Action_Item__c.object-meta.xml
<CustomObject>
    <label>Action Item</label>
    <nameField>
        <displayFormat>AI{00000}</displayFormat>
        <label>Action Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>