force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Plan__c</fullName>
    <label>Action Plan</label>
    <referenceTo>animalos__Action_Plan__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>