force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__Action_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Time__c</fullName>
    <label>Action Time</label>
    <type>Time</type>
</CustomField>