force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bird Daily Record</fullName>
            </value>
            <value>
                <fullName>Daily Observation</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
            </value>
            <value>
                <fullName>FAS Observations</fullName>
            </value>
            <value>
                <fullName>Feline Toileting Habits</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Koala Daily Record</fullName>
            </value>
            <value>
                <fullName>Mammal Daily Record</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Orphan Bird Feeding Chart</fullName>
            </value>
            <value>
                <fullName>Reptile Daily Record</fullName>
            </value>
            <value>
                <fullName>Sanitation</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Weigh In</fullName>
            </value>
            <value>
                <fullName>Wildlife Daily Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>