force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__Description__c.field-meta.xml
<CustomField>
    <fullName>animalos__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>