force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__First_Given__c.field-meta.xml
<CustomField>
    <fullName>animalos__First_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Given</label>
    <type>Checkbox</type>
</CustomField>