force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__Medicine__c.field-meta.xml
<CustomField>
    <fullName>animalos__Medicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>