force-app/main/default/objects/animalos__Action_Item__c/fields/animalos__Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>animalos__Time_of_Day__c</fullName>
    <label>Time of Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Late Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>